[tool.poetry]
name = "panda"
version = "0.1.0"
description = ""
authors = ["Ruoqi Huang <huangruoqi374@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.7.0.72"
mediapipe = "^0.9.1.0"
panda3d = "1.10.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
